--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     },
   "dependencies": {
     "colors"   :  "*",
-    "flatiron" :  "0.1.x",
+    "express"  :  "2.5.x",
+    "config"   :  "0.4.x",
     "optimist" :  "0.2.x",
-    "union"    :  "0.1.x",
     "ecstatic" :  "0.1.x",
     "socket.io":  "0.9.x",
     "oauth"    :  "0.9.x",
