added jade template engine

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "optimist" :  "0.2.x",
     "ecstatic" :  "0.1.x",
     "socket.io":  "0.9.x",
+    "jade"     :  "0.26.x",
     "oauth"    :  "0.9.x",
     "spotify"  :  "0.2.x",
     "rdio-node":  "git://github.com/monsur/rdio-node.git#master"
